<resources>
    <string name="app_name" translatable="false">QuitSmoking</string>
    <string name="channel_name" translatable="false">Goal</string>
    <string name="channel_description" translatable="false">Notify when goal is done.</string>

    <string name="nav_home_title">Napredek</string>
    <string name="nav_trophies_title">Značke</string>
    <string name="nav_health_title">Zdravje</string>
    <string name="nav_store_title">Trgovina</string>
    <string name="nav_settings_title">Nastavitve</string>

    <string name="menu_settings_title">Nastavitve</string>

    <string name="common_date_time_formatting_date_day_month_year" translatable="false">dd.MM.yyyy</string>
    <string name="common_date_time_formatting_time_hour_minute" translatable="false">HH:mm</string>
    <string name="common_submit">Potrdi</string>
    <string name="common_cancel">Prekliči</string>
    <string name="common_set">Določi</string>

    <string name="settings_quit_date_label">Nastavi datum začetka</string>
    <string name="settings_smoked_per_day_label">Dnevno število pokajenih cigaret</string>
    <string name="settings_cigs_in_pack_label">Število cigaret v paketu</string>
    <string name="settings_years_of_smoking_label">Število let kajenja</string>
    <string name="settings_price_per_pack_label">Cena paketa</string>
    <string name="settings_currency_label">Valuta</string>

    <string name="mp_smoke_free_label">Čas brez kajenja</string>
    <string name="mp_money_saved_label">Prihranjen denar</string>
    <string name="mp_life_regained_label">Pridobljeno življenje</string>
    <string name="mp_cigs_not_smoked_label">Nepokajeni cigareti</string>
    <string name="mp_history_card_title">V času kajenja:</string>
    <string name="mp_stats_card_title">V času brez kajenja:</string>
    <string name="mp_cigs_smoked_label">Skajene cigarete</string>
    <string name="mp_money_spent_label">Porabljen denar</string>
    <string name="mp_life_lost_label">Izgubljeno življenje</string>

    <string name="goal_title">CILJ</string>
    <string name="goal_bottom_sheet_title">Cilji:</string>
    <string name="goal_btn_set_title">nastavi cilj</string>
    <string name="goal_two_days">2 dni</string>
    <string name="goal_three_days">3 dni</string>
    <string name="goal_four_days">4 dni</string>
    <string name="goal_five_days">5 dni</string>
    <string name="goal_six_days">6 dni</string>
    <string name="goal_ten_days">10 dni</string>
    <string name="goal_one_week">1 teden</string>
    <string name="goal_two_weeks">2 tedna</string>
    <string name="goal_three_weeks">3 tedni</string>
    <string name="goal_one_month">1 mesec</string>
    <string name="goal_three_months">3 meseci</string>
    <string name="goal_six_months">6 mesecev</string>
    <string name="goal_one_year">1 leto</string>
    <string name="goal_five_years">5 let</string>

    <!--    Health   -->
    <string name="health_status_done">Doseženo</string>

    <string name="health_descr_one">Po 20 minutah: Krvni pritisk in utrip srca se zmanjšata.</string>
    <string name="health_descr_two">Po 8 urah: Raven ogljikovega monoksida v krvi se vrne v normalno stanje.</string>
    <string name="health_descr_three">Po 24 urah: Vaša možnost srčnega infarkta se zmanjša.</string>
    <string name="health_descr_four">Po 48 urah: Vaša sposobnost okusa in vonja se začne vračati.</string>
    <string name="health_descr_five">Po 72 urah: Dihalne poti se začnejo sproščati.</string>
    <string name="health_descr_six">Po 5 do 8 dneh: Povprečno število hrepenenj se zmanjša na 3 na dan.</string>
    <string name="health_descr_seven">Po 10 do 14 dneh: Krvni obtok v dlesni in zobeh se vrne v normalno stanje. Hrepenenje se pomakne na 2 na dan (povprečno).</string>
    <string name="health_descr_eight">Po 2 do 12 tednih: Izboljša se vam prekrvavitev in poveča delovanje pljuč.</string>
    <string name="health_descr_nine">Po 3 do 4 tednih: Jeza, tesnoba, nemir in depresija prenehajo.</string>
    <string name="health_descr_ten">Po 2 mesecih: Odpornost na inzulin se je normalizirala kljub povprečnemu povečanju telesne mase 5,95 lb (2,7 kg).</string>
    <string name="health_descr_eleven">Po 1 do 9 mesecih: Kašelj in zasoplost se zmanjšata.</string>
    <string name="health_descr_twelve">Po 1 do 5 letih: Tveganje za smrt zaradi srčnega zastoja je približno polovica od tveganja za kadilca.</string>
    <string name="health_descr_thirteen">Po desetih letih: vaše tveganje za pljučnega raka pade na približno polovico od tveganja za kadilca.</string>

    <!--   Trophies -->
    <string name="trophies_header_title_one">Nepokajeni cigareti</string>
    <string name="trophies_header_title_two">Dnevi brez kajenja</string>
    <string name="trophies_header_title_three">Pridobljeno življenje</string>

    <!-- Store -->
    <string name="store_current_money_title">Trenutna količina denarja</string>
    <string name="store_all_items_title">Stvari, ki si jih zaslužiš namesto kajenja</string>
    <string name="store_purchase">Kupi</string>
    <string name="store_bought">Kupljeno</string>
    <string name="store_dialog_title">Želja</string>
    <string name="store_dialog_message">Vpiši ime in ceno tvoje želje.</string>
    <string name="store_dialog_item_name_hint">Želim si…</string>
    <string name="store_dialog_item_price_hint">Cena…</string>
    <string name="store_toast_item_bought">To je že tvoje.</string>
    <string name="store_toast_not_enough_money">Premalo denarja.</string>

    <string name="notification_goal_title">Cilj dosežen. Določi naslednjega!</string>
</resources>
